# aicamp-demo

./: .env.sample  .gitignore  README.md  pyproject.toml  worker.py
workflow/: workflows.py
workflow/docai/: workflow.py
